# saintcon2023-emu

./: .gitmodules  README.md  howto.txt  partitions.csv  pinouts.txt  sdkconfig.defaults
components/box-emu-hal/: CMakeLists.txt
components/box-emu-hal/include/: badge_input.h  fs_init.h  fs_init.hpp  hal_events.hpp  i2c.hpp  i80_lcd.h  pindefs.h
components/box-emu-hal/src/: badge_input.cpp  fs_init.cpp  i2c.cpp  i2s_audio.cpp  i80_lcd.cpp  mmap.cpp
components/gbc/gnuboy/include/gnuboy/: mem.h
components/gbc/gnuboy/src/: lcd.c  loader.c  mem.c
components/gbc/src/: gameboy.cpp
components/gui/: CMakeLists.txt
components/gui/include/: gui.hpp
components/gui/src/: gui.cpp
components/menu/: CMakeLists.txt
components/menu/include/: menu.hpp
components/nes/nofrendo/: bitmap.c
components/nes/src/: nes.cpp  video_audio.c
main/: CMakeLists.txt  Kconfig.projbuild  cart.hpp  main.cpp  rom_info.cpp  rom_info.hpp
